; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_compress.c_RtlpWorkSpaceSizeLZNT1.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_compress.c_RtlpWorkSpaceSizeLZNT1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COMPRESSION_ENGINE_STANDARD = common dso_local global i64 0, align 8
@STATUS_SUCCESS = common dso_local global i32 0, align 4
@COMPRESSION_ENGINE_MAXIMUM = common dso_local global i64 0, align 8
@STATUS_NOT_SUPPORTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32*, i32*)* @RtlpWorkSpaceSizeLZNT1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RtlpWorkSpaceSizeLZNT1(i64 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i64 %0, i64* %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @COMPRESSION_ENGINE_STANDARD, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32*, i32** %6, align 8
  store i32 32784, i32* %12, align 4
  %13 = load i32*, i32** %7, align 8
  store i32 4096, i32* %13, align 4
  %14 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %14, i32* %4, align 4
  br label %26

15:                                               ; preds = %3
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* @COMPRESSION_ENGINE_MAXIMUM, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15
  %20 = load i32*, i32** %6, align 8
  store i32 16, i32* %20, align 4
  %21 = load i32*, i32** %7, align 8
  store i32 4096, i32* %21, align 4
  %22 = load i32, i32* @STATUS_SUCCESS, align 4
  store i32 %22, i32* %4, align 4
  br label %26

23:                                               ; preds = %15
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* @STATUS_NOT_SUPPORTED, align 4
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %24, %19, %11
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
